--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,21 +1,23 @@
+<%
+const manifest = htmlWebpackPlugin.options.manifest || {};
+%>
+
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>Break Debug Blame</title>
+        <title>Project Morphling</title>
 
-        <link rel="shortcut icon" href="[images/favicon.ico]">
+        <link rel="shortcut icon" href="<%= manifest['images\\favicon.ico'] %>">
 
-        <link rel="stylesheet" href="[theme.css]"/>
-        <link rel="stylesheet" href="[app.css]"/>
+        <link rel="stylesheet" href="<%= manifest['theme.css'] %>"/>
+        <link rel="stylesheet" href="<%= manifest['app.css'] %>"/>
     </head>
     <body>
-        <div id="app-container">
-            <router-view></router-view>
-        </div>
+        <div id="app-container"></div>
 
-        <script defer type="text/javascript" src="[theme.js]"></script>
-        <script defer type="text/javascript" src="[vendor.js]"></script>
-        <script defer type="text/javascript" src="[app.js]"></script>
+        <script defer type="text/javascript" src="<%= manifest['vendor.js'] %>"></script>
+        <script defer type="text/javascript" src="<%= manifest['theme.js'] %>"></script>
+        <script defer type="text/javascript" src="<%= manifest['app.js'] %>"></script>
     </body>
 </html>
