--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,12 +1,12 @@
 /* Theme variables */
 $primary: hsl(206, 80%, 30%);
 $secondary: hsl(184, 75%, 45%);
-$light: desaturate(lighten($primary, 10%), 60%);
-$dark: desaturate(darken($primary, 10%), 60%);
+//$light: desaturate(lighten($primary, 10%), 60%);
+//$dark: desaturate(darken($primary, 10%), 60%);
 
 /* Body */
-$body-bg: desaturate(darken($primary, 22%), 30%);
-$body-color: white;
+//$body-bg: desaturate(darken($primary, 22%), 30%);
+//$body-color: white;
 
 /* Buttons */
 $btn-padding-x: 20px;
@@ -14,7 +14,8 @@ $btn-padding-x: 20px;
 /* Typography */
 $headings-font-family: inherit;
 
-$font-weight-base: 400;
+$font-weight-base: 300;
+$headings-font-weight: 400;
 
 $font-size-base: 1.1rem;
 $font-size-lg: ($font-size-base * 1.25);
